feat(framework): 序列化工厂